--- a/frontend/gh-pages/package.json
+++ b/frontend/gh-pages/package.json
@@ -2,13 +2,15 @@
   "name": "gh-pages",
   "private": true,
   "version": "0.0.0",
-  "homepage": "/data-to-graph/#",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "postdeploy": "echo 'Deployment complete!'"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -28,6 +30,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "vite-plugin-svgr": "^4.2.0"
