--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "json-to-graph"
+name = "data-to-graph"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -15,7 +15,7 @@ mypy = "^1.5.1"
 neo4j = "^5.12.0"
 graphviz = "^0.20.2"
 backoff = "^2.2.1"
-turbo-c2 = "^0.0.1a1"
+turbo-c2 = "^0.0.1a3"
 
 [tool.pytest.ini_options]
 addopts = [
