--- a/.github/workflows/deploy-page.yml
+++ b/.github/workflows/deploy-page.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'frontend/gh-pages/**'
   workflow_dispatch:
 
 permissions:
@@ -15,8 +17,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     defaults:
-        run:
-          working-directory: ./frontend/gh-pages
+      run:
+        working-directory: ./frontend/gh-pages
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
