Getting started page

--- a/.github/workflows/deploy-page.yml
+++ b/.github/workflows/deploy-page.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: CI=false NEXT_PUBLIC_BASE_PATH="/data-to-graph" NEXT_PUBLIC_DIST_DIR='dist/' npm run build
+        run: CI=false NEXT_PUBLIC_BASE_PATH="/data-to-graph" NEXT_PUBLIC_DIST_DIR='dist/' NEXT_PUBLIC_GA_ID='G-D7ZVFBG8RX' npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
