--- a/frontend/gh-pages/tsconfig.json
+++ b/frontend/gh-pages/tsconfig.json
@@ -14,7 +14,11 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": [
+      "node",
+      "mdx"
+     ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
