--- a/frontend/gh-pages/package.json
+++ b/frontend/gh-pages/package.json
@@ -13,17 +13,24 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@mui/icons-material": "^6.0.0",
     "@mui/material-nextjs": "^6.0.0",
+    "@next/mdx": "^14.2.9",
+    "@next/third-parties": "^14.2.9",
     "next": "14.1.0",
     "next-language-detector": "^1.1.0",
     "next-translate": "^2.6.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
