--- a/frontend/gh-pages/package.json
+++ b/frontend/gh-pages/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npx serve@latest out",
     "lint": "next lint",
     "preview": "serve out/ -p 3000"
   },
@@ -16,16 +16,21 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@mui/icons-material": "^6.0.0",
+    "@mui/material": "^6.1.0",
     "@mui/material-nextjs": "^6.0.0",
     "@next/mdx": "^14.2.9",
     "@next/third-parties": "^14.2.9",
+    "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "next-language-detector": "^1.1.0",
     "next-translate": "^2.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
