--- a/.github/workflows/deploy-page.yml
+++ b/.github/workflows/deploy-page.yml
@@ -36,7 +36,13 @@ jobs:
         run: npm install
 
       - name: Build
-        run: CI=false NEXT_PUBLIC_BASE_PATH="/data-to-graph" NEXT_PUBLIC_DIST_DIR='dist/' NEXT_PUBLIC_GA_ID='G-D7ZVFBG8RX' npm run build
+        env: 
+          CI: false
+          NEXT_PUBLIC_BASE_PATH: ${{ steps.pages.outputs.base_path }}
+          NEXT_PUBLIC_DIST_DIR: 'dist/'
+          NEXT_PUBLIC_GA_ID: ${{ vars.GA_ID }}
+          HOST: ${{ steps.pages.outputs.host }}
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
